<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">hello</string>
    <string name="wait">Please wait to location</string>
    <string name="app_name">Circles</string>
    <string name="sort_by_time">时间排序</string>
    <string name="sort_by_people">人气排序</string>
    <string name="user_image">用户头像</string>
    <string name="mapView">随便逛逛</string>
    <string name="activity_type">活动类型</string>
    <string name="activity_title">活动标题</string>
    <string name="activity_posters">活动海报</string>
    <string name="location_animation">定位动画</string>
    <string name="test">活动类型活动类型活动类型活动类型活动类型活动类型活动类型活动类型活动类型活动类型活动类型活动类型活动类型活动类型活动类型</string>
    
    <string name="str_act_all">所有活动</string>
    <string name="str_act_suggest">推荐活动</string>
    <string name="str_act_music">音乐/演出</string>
    <string name="str_act_life">生活/聚会</string>
    <string name="str_act_sport">体育</string>
    <string name="str_act_travel">旅行</string>
    <string name="str_act_study">讲座/沙龙</string>
    <string name="str_act_buy">二手买卖</string>
    <string name="str_act_other">其他</string>
    <string name="default_image">默认头像</string>
    <string name="default_user_name">测试测试</string>
    <string name="edit">编辑</string>
    <string name="user_message_icon">用户消息按钮</string>
    <string name="messages">用户消息</string>
    <string name="my_favor_activity">我收藏的活动</string>
    <string name="my_orginized_activity">我组织的活动</string>
    <string name="my_joined_activity">我参加的活动</string>
    <string name="my_favor_shops">我收藏的商铺</string>
    <string name="my_friends">我的好友</string>
    <string name="my_circles">我的圈子</string>
    <string name="userinfo_edit_title">编辑个人信息</string>
    <string name="login_username_hint">"	请输入账号"</string>
    <string name="login_userpwd_hint">"	请输入密码"</string>
    <string name="app_logo">应用LOG</string>
    <string name="register">注册</string>
    <string name="pwd_input">输入密码</string>
    <string name="login">登录</string>
    <string name="roaming">随便逛逛</string>
    <string name="new_activity">发起活动</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松开刷新…</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh…<stri></stri></string>
    
    <string name="listtitle">ListView</string>
    <string name="maptitle">MapView</string>
     <string name="shopinfotitle">Shopinfo</string>
    <string name="searchTips">请输入地点或商铺名称</string>
        <string name="pop">人气：90</string>
     <string name="activitynumber">活动数：30</string>
    <string name="address_temp">聚贤路3弄999号</string>
    <string name="phonenumber">0574-87621321</string>
    <string name="goingactivity">正在进行的活动</string>
    <string name="passedactivity">已经举办过的活动</string>
        <string name="mark">收藏店铺</string>
    <string name="take">发布活动</string>
    <string name="suggest">推荐给好友</string>
    
    <string name="title">标题:</string>
    <string name="title_hint">可输入30字以内的标题</string>
    <string name="summary">简介:</string>
    <string name="summary_hint">可输入30字以内的简介</string>
    <string name="type">类型:</string>
    <string name="start_time">开始时间：</string>
    <string name="end_time">结束时间：</string>
    <string name="address">地址:</string>
    <string name="address_hint">大城东路999号</string>
    <string name="poster">海报:</string>
    <string name="poster_description">活动海报</string>
    <string name="regularly_hold_ornot">是否定期举办</string>
    <string name="invite_friend_ornot">是否邀请好友</string>
    <string name="distribute">发布</string>
    <string name="cancel">取消</string>
    <string name="divider">分割符</string>
    <string name="test_school_item">学校3</string>
    <string name="friend_name_1">张学友</string>
    <string name="friend_name_2">刘德华</string>
    <string name="friend_name_3">郭富城</string>
    <string name="friend_name_4">黎明</string>
    <string name="friend_name_5">林青霞</string>
    <string name="friend_name_6">张曼玉</string>
    <string name="default_search_hint">搜索</string>
    <string name="search_button_description">搜索按钮</string>
    <string name="default_friend_num">共229位好友</string>
    <string name="back_to_exit">再按一次退出</string>
    <string name="default_spinner">请选择你所在的大学</string>
    <string name="start_location">正在定位...</string>
    <string name="fail_location">定位失败！点击小人重新定位或手动定位</string>

</resources>