<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="120dip"
    android:orientation="horizontal" 
    android:layout_weight="1">


    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="150dip"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />





    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="120dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="30dip"
        android:orientation="vertical" >


    <TextView
        android:id="@+id/PopText"
        android:layout_width="170dp"
        android:layout_height="60dip"
        android:gravity="center"
        android:text="@string/pop"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/NumText"
        android:layout_width="173dp"
        android:layout_height="60dip"
        android:gravity="center"
        android:text="@string/activitynumber"
        android:textSize="20dp" />

   </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="60dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />



    <TextView
        android:id="@+id/EditText"
        android:layout_width="220dip"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:text="@string/address"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="40dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />
</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="60dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />



    <TextView
        android:id="@+id/EditText"
        android:layout_width="220dip"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:text="@string/phonenumber"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="40dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />
</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="60dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />



    <TextView
        android:id="@+id/EditText"
        android:layout_width="220dip"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:text="@string/goingactivity"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="40dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />
</LinearLayout>


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="60dip"
    android:orientation="horizontal" 

    >

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="60dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />



    <TextView
        android:id="@+id/EditText"
        android:layout_width="220dip"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left"
        android:text="@string/passedactivity"
        android:textSize="20dp" />

    <ImageView
        android:id="@+id/right_arrow"
        android:layout_width="40dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_launcher" />
</LinearLayout>


<LinearLayout style="@android:style/ButtonBar"
        android:layout_width="fill_parent" android:layout_height="60dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <Button android:id="@+id/button_weather" android:text="@string/mark"
            android:layout_width="0dip" android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button android:id="@+id/button_mail" android:text="@string/take"
            android:layout_width="0dip" android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button android:id="@+id/button_train" android:text="@string/suggest"
            android:layout_width="0dip" android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>