<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="320dip"
        android:layout_height="45dip"
        android:background="@drawable/title_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="150dip"
            android:layout_height="30dip"
            android:layout_marginLeft="50dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/select_spinner2"
                android:layout_width="100dip"
                android:layout_height="30dip"
                android:layout_marginRight="-20dip"
                android:background="@drawable/school_bg" />

            <ImageView
                android:id="@+id/spinner_tag2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/spinner_tag" />
        </LinearLayout>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dip"
            android:background="@drawable/register_btn_bg"
            android:text="@string/register" />
    </LinearLayout>

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="130dip"
        android:layout_height="130dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/lodin_logo"
        android:contentDescription="@string/app_logo" />

    <EditText
        android:id="@+id/eUsername"
        android:layout_width="220dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dip"
        android:background="@drawable/input_box"
        android:hint="@string/login_username_hint"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:id="@+id/eUserpwd"
        android:layout_width="220dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/input_box"
        android:hint="@string/login_userpwd_hint"
        android:inputType="textPassword"
        android:password="true"
        android:singleLine="true" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="80dip"
        android:layout_height="50dip"
        android:layout_marginTop="30dip"
        android:background="@drawable/selector"
        android:text="@string/login" />

</LinearLayout>