<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dip"
    android:layout_marginTop="10dip"
    android:orientation="horizontal" >
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/activity_type"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_margin="5dip"
        android:contentDescription="@string/activity_type"
        android:src="@drawable/loading_01" />

    <ImageView
        android:id="@+id/activity_tag"
        android:layout_width="10dip"
        android:layout_height="10dip"
        android:layout_margin="5dip"
        android:layout_gravity="center"
        android:contentDescription="@string/activity_type"
        android:src="@drawable/loading_01" />
</LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:background="@drawable/white" >

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/activity_type"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:text="@string/activity_title" />

        <ImageView
            android:id="@+id/activity_posters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_title"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_margin="5dip"
            android:adjustViewBounds="true"
            android:contentDescription="@string/activity_posters"
            android:maxHeight="600dip"
            android:maxWidth="380dip"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:src="@drawable/loading_01" />
    </RelativeLayout>

</LinearLayout>